[tool.poetry]
name = "aws-iam-login"
version = "0.3.1"
description = "Configures STS credentials using a MFA authenticated session."
authors = ["Joris Conijn <jorisconijn@binx.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
boto3 = "^1.24.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^22.6.0"
pytest-cov = "^3.0.0"
mypy = "^1.4"
radon = "^5.1.0"
xenon = "^0.9.0"
twine = "^4.0.1"

[tool.poetry.scripts]
aws-iam-login = "aws_iam_login:main"

[tool.pytest]
testpaths = "tests"

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["aws_iam_login"]

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@abstract"
]

[tool.semantic_release]
version_variable = [
    "aws_iam_login/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
